--- a/index.html
+++ b/index.html
@@ -51,6 +51,40 @@ In this paper, we propose a new randomized second-order optimization algorithm--
 
 
 <h3>February 20, 2020</h3>
+<h1>New MS/PhD Student: Egor Shulgin</h1>
+<br>
+
+Egor Vladimirovich Shulgin is back at KAUST - now as an MS/PhD student. Welcome!!!
+
+Egor has co-authored 4 papers and a book (in Russian) entitled <a href="https://arxiv.org/abs/1907.01060">"Lecture Notes on Stochastic Processes"</a>.
+Here are the papers, in reverse chronological order:<br>
+- Uncertainty principle for communication compression in distributed and federated
+learning and the search for an optimal compressor <br>
+- Adaptive catalyst for smooth convex optimization <br>
+- Revisiting stochastic extragradient (AISTATS 2020) <br>
+- SGD: general analysis and improved rates (ICML 2019) <br>
+<br>
+
+Egor has a bachelor degree in Applied Mathematics from the Department of
+Control and Applied Mathematics at MIPT, Dolgoprudny, Russia. He majored in
+Data Analysis. His CV mentions the following as his main subjects: Probability
+Theory, Random Processes, Convex Optimization, and Machine Learning.<br>
+<br>
+
+
+Egor’s hobbies, according to his CV, are: hiking, alpine skiing, tennis,
+and judo. Notably, this list does not include table tennis. However, I
+know for a fact that he is very good in it!<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>February 20, 2020</h3>
 <h1>New Paper</h1>
 <br>
 
