--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@ joint work with <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a
 <br>
 
 Abstract: <i>
-In this paper, we propose a new randomized second-order optimization algorithm---Stochastic Subspace Cubic Newton (SSCN)---for minimizing a high dimensional convex function $f$. Our method can be seen both as a {\em stochastic} extension of the cubically-regularized Newton method of Nesterov and Polyak (2006), and a {\em second-order} enhancement of stochastic subspace descent of Kozak et al. (2019). We prove that as we vary the minibatch size, the global convergence rate of SSCN interpolates between the rate of stochastic coordinate descent (CD) and the rate of cubic regularized Newton, thus giving new insights into the connection between first and second-order methods. Remarkably, the local convergence rate of SSCN matches the rate of stochastic subspace descent applied to the problem of minimizing the quadratic function $\frac12 (x-x^*)^\top \nabla^2f(x^*)(x-x^*)$, where $x^*$ is the minimizer of $f$, and hence depends on the properties of $f$ at the optimum only. Our numerical experiments show that SSCN outperforms non-accelerated first-order CD algorithms while being competitive to their accelerated variants.
+In this paper, we propose a new randomized second-order optimization algorithm---Stochastic Subspace Cubic Newton (SSCN)---for minimizing a high
+dimensional convex function $f$. Our method can be seen both as astochastic extension of the cubically-regularized Newton method of Nesterov
+and Polyak (2006), and a second-order enhancement of stochastic subspace descent of Kozak et al. (2019). We prove that as we vary the
+minibatch size, the global convergence rate of SSCN interpolates between the rate of stochastic coordinate descent (CD) and the rate of cubic
+regularized Newton, thus giving new insights into the connection between first and second-order methods. Remarkably, the local convergence rate
+of SSCN matches the rate of stochastic subspace descent applied to the problem of minimizing the quadratic function
+$\frac{1}{2} (x-x^*)^\top \nabla^2 f(x^*)(x-x^*)$, where $x^*$ is the minimizer of $f$, and hence depends on the properties of $f$ at the optimum only.
+Our numerical experiments show that SSCN outperforms non-accelerated first-order CD algorithms while being competitive to their accelerated variants.
 </i> <br>
 
 <br>
@@ -57,12 +64,12 @@ In this paper, we propose a new randomized second-order optimization algorithm--
 Egor Vladimirovich Shulgin is back at KAUST - now as an MS/PhD student. Welcome!!!
 
 Egor has co-authored 4 papers and a book (in Russian) entitled <a href="https://arxiv.org/abs/1907.01060">"Lecture Notes on Stochastic Processes"</a>.
-Here are the papers, in reverse chronological order:<br>
-- Uncertainty principle for communication compression in distributed and federated
-learning and the search for an optimal compressor <br>
+Here are the papers, in reverse chronological order:<br><br>
+- <a href="https://arxiv.org/abs/2002.08958">Uncertainty principle for communication compression in distributed and federated
+learning and the search for an optimal compressor </a> <br>
 - Adaptive catalyst for smooth convex optimization <br>
-- Revisiting stochastic extragradient (AISTATS 2020) <br>
-- SGD: general analysis and improved rates (ICML 2019) <br>
+- <a href="https://arxiv.org/abs/1905.11373">Revisiting stochastic extragradient</a> (AISTATS 2020) <br>
+- <a href="http://proceedings.mlr.press/v97/qian19b">SGD: general analysis and improved rates</a> (ICML 2019) <br>
 <br>
 
 Egor has a bachelor degree in Applied Mathematics from the Department of
