--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Our numerical experiments show that SSCN outperforms non-accelerated first-order
 <h1>New MS/PhD Student: Egor Shulgin</h1>
 <br>
 
-Egor Vladimirovich Shulgin is back at KAUST - now as an MS/PhD student. Welcome!!!
+Egor Vladimirovich Shulgin is back at KAUST - now as an MS/PhD student. Welcome!!! <br><br>
 
 Egor has co-authored 4 papers and a book (in Russian) entitled <a href="https://arxiv.org/abs/1907.01060">"Lecture Notes on Stochastic Processes"</a>.
 Here are the papers, in reverse chronological order:<br><br>
