--- a/i_team.html
+++ b/i_team.html
@@ -41,6 +41,7 @@
 
           <h2>Research Scientists </h2>
           <ul>
+            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (02/2020-present) </li>
             <li><a href="https://www.gipsa-lab.grenoble-inp.fr/%7Elaurent.condat/">Laurent Condat</a> (11/2019-present) </li>
           </ul>
 
