--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,16 @@
 
           <h2> Prepared in 2020 </h2>
 
+          [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richt\'{a}rik<br>
+          <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
+          [<a href="papers/">pdf</a>] [code: ACGD, ADIANA] <br>
+          <br>
+
+          [125] Dmitry Kovalev, Robert M. Gower, Peter Richtárik and Alexander Rogozin<br>
+          <b>Fast linear convergence of randomized BFGS</b><br>
+          [<a href="papers/RBFGS.pdf">pdf</a>] [code: RBFGS] <br>
+          <br>
+
           [124] Filip Hanzely, Nikita Doikov, Peter Richtárik and Yurii Nesterov<br>
           <b>Stochastic subspace cubic Newton method</b><br>
           [<a href="https://arxiv.org/abs/2002.08958">arXiv</a>] [code: SSCN] <br>
