RBFGS on main site

--- a/index.html
+++ b/index.html
@@ -29,9 +29,32 @@
       <div id="wrapper" class="main">
         <div id="content">
 
-<h3>February 25, 2020</h3>
+
+<h3>February 26, 2020</h3>
 <h1>New Paper</h1>
 <br>
+
+<span class="important">New paper out:</span>
+<a href="papers/RBFGS.pdf">"Fast Linear Convergence of Randomized BFGS"</a> -
+joint work with <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>,
+ <a href="https://gowerrobert.github.io">Robert M. Gower</a>, and <a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a>.<br>
+<br>
+
+Abstract: <i>
+Since the late 1950’s when quasi-Newton methods first appeared, they have become one of the most widely used and
+efficient algorithmic paradigms for unconstrained optimization. Despite their immense practical success, there is
+little theory that shows why these methods are so efficient. We provide a semi-local rate of convergence for the
+randomized BFGS method which can be significantly better than that of gradient descent, finally giving theoretical
+evidence supporting the superior empirical performance of the method.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2002.09526">"Stochastic Subspace Cubic Newton Method"</a> -
