--- a/i_papers.html
+++ b/i_papers.html
@@ -58,7 +58,7 @@
 
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richt\'{a}rik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
-          [<a href="papers/">pdf</a>] [code: ACGD, ADIANA] <br>
+          [<a href="papers/ADIANA.pdf">pdf</a>] [code: ACGD, ADIANA] <br>
           <br>
 
           [125] Dmitry Kovalev, Robert M. Gower, Peter Richtárik and Alexander Rogozin<br>
