--- a/i_papers.html
+++ b/i_papers.html
@@ -56,7 +56,7 @@
 
           <h2> Prepared in 2020 </h2>
 
-          [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richt\'{a}rik<br>
+          [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
           [<a href="papers/ADIANA.pdf">pdf</a>] [code: ACGD, ADIANA] <br>
           <br>
