--- a/i_papers.html
+++ b/i_papers.html
@@ -58,6 +58,7 @@
 
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="papers/ADIANA.pdf">pdf</a>] [code: ACGD, ADIANA] <br>
           <br>
 
