2 more papers on arXiv

--- a/i_papers.html
+++ b/i_papers.html
@@ -59,12 +59,12 @@
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="papers/ADIANA.pdf">pdf</a>] [code: ACGD, ADIANA] <br>
+          [<a href="https://arxiv.org/abs/2002.11364">arXiv</a>] [code: ACGD, ADIANA] <br>
           <br>
 
           [125] Dmitry Kovalev, Robert M. Gower, Peter Richtárik and Alexander Rogozin<br>
           <b>Fast linear convergence of randomized BFGS</b><br>
-          [<a href="papers/RBFGS.pdf">pdf</a>] [code: RBFGS] <br>
+          [<a href="https://arxiv.org/abs/2002.11337">arXiv</a>] [code: RBFGS] <br>
           <br>
 
           [124] Filip Hanzely, Nikita Doikov, Peter Richtárik and Yurii Nesterov<br>
