--- a/index.html
+++ b/index.html
@@ -30,12 +30,35 @@
         <div id="content">
 
 
+
 <h3>February 26, 2020</h3>
 <h1>New Paper</h1>
 <br>
 
 <span class="important">New paper out:</span>
-<a href="papers/RBFGS.pdf">"Fast Linear Convergence of Randomized BFGS"</a> -
+<a href="https://arxiv.org/abs/2002.11364">"Acceleration for Compressed Gradient Descent in Distributed and Federated Optimization"</a> -
+joint work with <a href="https://zhizeli.github.io">Zhize Li</a>,
+ <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, and <a href="https://qianxunk.github.io">Xun Qian</a>.<br>
+<br>
+
+Abstract: <i>
+Due to the high communication cost in distributed and federated learning problems, methods relying on compression of communicated messages are becoming increasingly popular. While in other contexts the best performing gradient-type methods invariably rely on some form of acceleration/momentum to reduce the number of iterations, there are no methods which combine the benefits of both gradient compression and acceleration. In this paper, we remedy this situation and propose the first accelerated compressed gradient descent (ACGD) methods.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>February 26, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.11337">"Fast Linear Convergence of Randomized BFGS"</a> -
 joint work with <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>,
  <a href="https://gowerrobert.github.io">Robert M. Gower</a>, and <a href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a>.<br>
 <br>
