--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ evidence supporting the superior empirical performance of the method.
 
 
 
+
+<h3>February 21, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2002.09526">"Stochastic Subspace Cubic Newton Method"</a> -
 joint work with <a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>,
@@ -101,6 +106,8 @@ Our numerical experiments show that SSCN outperforms non-accelerated first-order
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br>
+
+
 
 
 <h3>February 20, 2020</h3>
@@ -134,6 +141,7 @@ know for a fact that he is very good in it!<br>
 <img alt="" src="imgs/fancy-line.png" width="196" height="36">
 <br>
 <br>
+
 
 
 
