--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,13 @@
 
           <h2> Prepared in 2020 </h2>
 
+
+          [127] Aleksandr Beznosikov, Samuel Horváth, Peter Richtárik and Mher Safaryan<br>
+          <b>On biased compression for distributed learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2002.12410">arXiv</a>] [code: CGD, Distributed SGD with Error Feedback] <br>
+          <br>
+
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
           <span class="important">Federated Learning Paper</span><br>
