--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
         <div id="content">
 
 
+<h3>March 2, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2002.12410">"On Biased Compression for Distributed Learning"</a> -
+joint work with <a href="https://scholar.google.ru/citations?user=hVVJR-sAAAAJ&hl=en">Aleksandr Beznosikov</a>,
+<a href="https://samuelhorvath.github.io">Samuel Horváth</a>, and <a href="https://mher-safaryan.github.io">Mher Safaryan</a>.<br>
+<br>
+
+Abstract: <i>
+In the last few years, various communication  compression techniques have  emerged  as an indispensable  tool helping to alleviate the communication bottleneck in distributed learning.
+However, despite the fact biased compressors often show superior performance in practice when compared to the much more studied and understood unbiased compressors,  very little
+is known about them. In this work we study three classes of biased compression operators, two of which are new, and their performance when applied to  (stochastic) gradient descent
+and distributed (stochastic) gradient descent.  We show for the first time that biased compressors can lead to linear convergence rates both in the single node and distributed settings.
+Our distributed SGD method enjoys the ergodic rate $O \left( \frac{\delta L \exp(-K) }{\mu}  + \frac{(C + D)}{K\mu} \right)$, where $\delta$ is a compression parameter which grows when
+more compression is applied, $L$ and $\mu$ are the smoothness and strong convexity constants, $C$ captures stochastic gradient noise ($C=0$ if full gradients are computed on each node)
+and $D$ captures the variance of the gradients at the optimum ($D=0$ for over-parameterized models).  Further,  via a theoretical study of several synthetic and empirical distributions
+of communicated gradients, we shed light on why and by how much  biased compressors outperform  their unbiased variants.  Finally, we  propose a new highly performing biased
+compressor---combination of Top-$k$ and natural dithering---which in our experiments outperforms all other compression techniques.
+</i> <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>February 26, 2020</h3>
 <h1>New Paper</h1>
