NeurIPS 2020 Area Chair

--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>March 10, 2020</h3>
+<h1>Area Chair for NeurIPS 2020</h1>
+<br>
+
+I will serve as an Area Chair for <a href="https://nips.cc/Conferences/2020/">NeurIPS 2020</a>, to be
+held during December 6-12, 2020 in Vancouver, Canada (same location as last year). For those not in the know,
+Google Scholar Metrics says that NeurIPS is the #1 conference in AI:
+<br>
+<br>
+<a href="https://scholar.google.com/citations?view_op=top_venues&hl=en&vq=eng_artificialintelligence"> <img alt="" src="imgs/GoogleScholarMetrics-AI.png" width="700" ></a>
+<br>
+<br>
+ The review process has changed this year; here is a short and beautifully produced video explaining the key 5 changes:
+ <br>
+<br>
+<a href="https://www.youtube.com/watch?v=361h6lHZGDg&feature=share"> <img alt="" src="imgs/5changes.png" width="700" ></a>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>February 27, 2020</h3>
 <h1>New Paper</h1>
