--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Google Scholar Metrics says that NeurIPS is the #1 conference in AI:
  The review process has changed this year; here is a short and beautifully produced video explaining the key 5 changes:
  <br>
 <br>
-<a href="https://www.youtube.com/watch?v=361h6lHZGDg&feature=share"> <img alt="" src="imgs/5changes.png" width="700" ></a>
+<a href="https://www.youtube.com/watch?v=361h6lHZGDg&feature=share"> <img alt="" src="imgs/5changes.jp2" width="700" ></a>
 <br>
 
 
