--- a/index.html
+++ b/index.html
@@ -55,6 +55,35 @@ Google Scholar Metrics says that NeurIPS is the #1 conference in AI:
 <br>
 
 
+
+<h3>March 9, 2020</h3>
+<h1>Coronavirus at KAUST</h1>
+<br>
+
+No, Covid-19 did not catch up with anyone at KAUST yet. Still in luck. However, as in many places, its increasing omnipresence and gravitational pull is felt here as well.
+
+<br>
+<br>
+For example, as of today, all KAUST lectures are moving online. And for a good reason I think: we have seen in Lombardy what the virus can do when unchecked.
+I am teaching my CS 390T Federated Learning course on Sundays (yes - the work week in Saudi spans Sunday-Thursday) and Tuesdays, and hence my first online lecture will take place on Sunday March 15. I hope, at least, as I need
+to decide how best to do it.
+<br>
+<br>
+
+Conference travel has been limited for some time now, but the rules are even  more strict now. This seems less than necessary
+as conferences drop like flies anyway. My planned travel between now and May includes a seminar talk at EPFL (Switzerland), a workshop
+keynote lecture at King Faisal University (Al-Ahsa, Saudi Arabia), presentation at ICLR (Addis Ababa, Ethiopia), and SIAM Conference on Optimization (Hong Kong)
+which I am helping to organize. Most of these events are cancelled, and those that survive will most probably go to sleep soon.
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>February 27, 2020</h3>
 <h1>New Paper</h1>
 <br>
