--- a/i_talks.html
+++ b/i_talks.html
@@ -41,6 +41,10 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 </p>
 
 <p>
+2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
+</p>
+
+<p>
 <a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020
 </p>
 
@@ -54,24 +58,24 @@ session organizer)
 </p>
 
 <p>
-<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited)
+<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
 <a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
-University, Hong Kong, China, May 26-29, 2020 (organizing committee member)
+University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
-<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020
+<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span>
 </p>
 
 <p>
-AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker)
+AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker) <span class="important">cancelled due to Covid-19</span>
 </p>
 
 <p>
-Research Seminar, EPFL, Switzerland, April 3, 2020
+Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
 
