--- a/i_talks.html
+++ b/i_talks.html
@@ -45,6 +45,10 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 </p>
 
 <p>
+<a href="https://icml.cc">ICML 2020</a> Workshop: "Beyond First Order Methods", Vienna, Austria, July  2020 (plenary)
+</p>
+
+<p>
 <a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020
 </p>
 
