--- a/i_talks.html
+++ b/i_talks.html
@@ -58,11 +58,15 @@ Mathematics Research Seminar, Seoul National University, Seoul, South Korea, Jun
 
 <p>
 <a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
-session organizer)
+session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed due to Covid-19</span>
+</p>
+
+<p>
+<a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
 </p>
 
 <p>
@@ -71,7 +75,7 @@ University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <spa
 </p>
 
 <p>
-<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span>
+<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
 </p>
 
 <p>
