--- a/i_talks.html
+++ b/i_talks.html
@@ -49,7 +49,7 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 </p>
 
 <p>
-<a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020
+<a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020 <span class="important">virtual-only due to Covid-19</span>
 </p>
 
 <p>
