local fixed point method paper

--- a/i_papers.html
+++ b/i_papers.html
@@ -56,6 +56,11 @@
 
           <h2> Prepared in 2020 </h2>
 
+          [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
+          <b>From local SGD to local fixed point methods for federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2004.01442">arXiv</a>] [code: LDFPM, RDFPM] <br>
+          <br>
 
           [127] Aleksandr Beznosikov, Samuel Horváth, Peter Richtárik and Mher Safaryan<br>
           <b>On biased compression for distributed learning</b><br>
