--- a/i_talks.html
+++ b/i_talks.html
@@ -33,7 +33,7 @@
       <div id="wrapper" class="main">
         <div id="content">
 
-<h2> Future Talks</h2>
+<h1> Future Talks</h1>
 
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
@@ -88,7 +88,7 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 
 
 
-<h2>Video Talks</h2>
+<h1>Video Talks</h1>
 
 
 
@@ -163,7 +163,7 @@ Simons Institute, Berkeley, 10/2013
 
 
 
-<h2>2019 Talks</h2>
+<h1>2019 Talks</h1>
 
 
 
@@ -263,7 +263,9 @@ Short Doctoral Course (3 hours), Erwin Schrödinger International Institute for 
 Austria, February 21-22, 2019 (invited)
 </p>
 
-<h2>2018 Talks</h2>
+
+
+<h1>2018 Talks</h1>
 
 <p>
 [151] <a href="https://nips.cc">NeurIPS 2018</a>,
@@ -358,7 +360,9 @@ href="https://www.turing.ac.uk/">Alan Turing Institute</a>.
 </p>
 
 
-<h2>2017 Talks </h2>
+
+
+<h1>2017 Talks </h1>
 
 
 <p>
@@ -400,68 +404,7 @@ Privacy</a>, September 11-12, 2017, Lille, France
             August 6-11, 2017 (attending)</p>
           <p>[131] <a
               href="http://www.fields.utoronto.ca/activities/17-18/AN70">Workshop
-on
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              Convex Optimization and Applications</a>, Fields
+on Convex Optimization and Applications</a>, Fields
             Institute, Toronto, Canada, July 4-7, 2017 (invited) [<a
               href="talks/TALK-2017-FieldsInstitute-AN70.pdf">slides</a>]</p>
           <p>[130] Research Seminar, Cardiff University, UK, June 1,
@@ -611,7 +554,10 @@ href="https://cemse.kaust.edu.sa/events/Pages/AMCS-Graduate-Peter-Richtarik.aspx
             January 29-February 2, 2017 (invited)</p>
           <p>[124] Research Seminar, Department of Computing, Imperial
             College London, UK, January 20, 2017 (invited) </p>
-          <h2> 2016 Talks</h2>
+
+
+
+          <h1> 2016 Talks</h1>
           <p>[123] <a
               href="https://events.yandex.ru/events/science-seminars/02-dec-2016/">Yandex
 
@@ -1732,7 +1678,10 @@ Probability
 
 
               konferencia)</a>, Bratislava, Slovakia, January 4, 2016</p>
-          <h2>2015 Talks</h2>
+
+
+
+          <h1>2015 Talks</h1>
           <p> [101] <a
               href="http://icms.org.uk/workshops/largescaleinverseproblems">Theoretical
 and
@@ -2486,7 +2435,9 @@ href="http://www.maths.ed.ac.uk/%7Eprichtar/talks/TALK-2015-01-ArbitrarySampling
             2015 (invited)<br>
             <br>
           </p>
-          <h2>2014 Talks</h2>
+
+
+          <h1>2014 Talks</h1>
           [83] <a
             href="http://www.andrew.cmu.edu/user/jfp/FoCM2014.html">Optimization
 
@@ -3525,9 +3476,11 @@ Data:
               href="https://www.youtube.com/watch?v=0sHOfqhCZw0"><img
                 alt="YouTube" src="imgs/youtube.png" border="0"
                 width="30" height="21"></a></p>
-          <br>
-          <h2>2013 Talks<br>
-          </h2>
+
+
+
+          <h1>2013 Talks</h1>
+
           <p>[63] <a href="http://opt.kyb.tuebingen.mpg.de/">6th NIPS
               workshop on Optimization for Machine Learning</a>, Lake
             Tahoe, California, December 9-10, 2013 (plenary)<br>
@@ -4271,9 +4224,9 @@ and
               Statistical Learning</a>, Les Houches, France, January
             6-11, 2013 (invited) <a href="talks/LesHouches2013.pdf">[slides]</a><br>
           </p>
-          <p> <br>
-          </p>
-          <h2>2012 Talks</h2>
+
+
+          <h1>2012 Talks</h1>
           <p>[46] University of Strathclyde, <a
               href="http://www.strath.ac.uk/mathstat/seminars/">Numerical
 
@@ -4738,21 +4691,27 @@ Conference
 
               on Optimization Methods and Software</a>, Chania, Crete,
             Greece, May 13–17, 2012 (invited) </p>
+
           <p>[38] University of Cambridge, <a
               href="http://www.talks.cam.ac.uk/talk/index/36496">Applied
               and Computational Analysis Seminar</a>, May 3, 2012
-            (invited) <br>
+            (invited)
           </p>
+
           <p>[37] <a href="http://www.bus.miami.edu/ios/">INFORMS
               Optimization Society Conference</a>, Coral Gables,
             Florida, February 24–26, 2012 </p>
+
           <p>[36] Cardiff University, Operational Research and
             Statistics Research Seminar, February 15, 2012 (invited)</p>
+
           <p>[35] Comenius University, Seminar of the Center for
-            Economics and Finance, January 9, 2012<br>
-            <br>
+            Economics and Finance, January 9, 2012
           </p>
-          <h2>2011 Talks</h2>
+
+          <h1>2011 Talks</h1>
+
+
           <p> [34] <a href="http://lsec.cc.ac.cn/%7Eicnonla/">ICNONLA</a>,
             The 8th International Conference on Numerical Optimization
             and Numerical Linear Algebra, Xiamen, China, November 7–11,
@@ -4917,7 +4876,7 @@ Mathematics
 
 
 
-<h2>2006-2010 Talks</h2>
+<h1>2006-2010 Talks</h1>
 
 
 
