--- a/i_team.html
+++ b/i_team.html
@@ -36,8 +36,7 @@
           my group, read the instructions <a href="i_join.html">here.</a><br>
           <br>
 
-          <h1>KAUST</h1>
-          <br>
+          <h1>Team @ KAUST</h1>
 
           <h2>Research Scientists </h2>
           <ul>
@@ -130,237 +129,57 @@
           </ul>
 
           <br>
-          <br>
 
 
-          <h1>EDINBURGH</h1>
-          <br>
+
+          <h1>Team @ University of Edinburgh</h1>
+
 
           <h2> Postdocs</h2>
 
           <ul>
             <li><a href="https://gowerrobert.github.io/">Robert Mansel
-                Gower</a> (3/2016<span class="style1" style="width:
-                300px;">–6/2016</span>)</li>
-            <li>current position: Assistant Professor, Télécom
-              ParisTech, Paris, France </li>
-          </ul>
-          <ul>
-            <li><a href="http://people.ufpr.br/%7Eademir.ribeiro/">Ademir
+                Gower</a> (3/2016<span class="style1" style="width: 300px;">–6/2016</span>) <br> current position: Assistant Professor, Télécom ParisTech, Paris, France </li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Ribeiro</a> (10/2014<span class="style1" style="width:
-                300px;">–</span>3/2015)</li>
-            <li>current position: Associate Professor, Federal
-              University of Paraná, Brazil<br>
+            <li><a href="http://people.ufpr.br/%7Eademir.ribeiro/">Ademir Ribeiro</a> (10/2014<span class="style1" style="width:
+                300px;">–</span>3/2015) <br> current position: Associate Professor, Federal
+              University of Paraná, Brazil
             </li>
-          </ul>
-          <ul>
+
             <li><a href="http://hkumath.hku.hk/%7Ezhengqu/">Zheng Qu</a>
-              (1/2014<span class="style1" style="width: 300px;">–</span>8/2015)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-              <br>
-            </li>
-            <li>current position: Assistant Professor, University of
+              (1/2014<span class="style1" style="width: 300px;">–</span>8/2015) <br> current position: Assistant Professor, University of
               Hong Kong, Hong Kong </li>
-          </ul>
-          <ul>
-            <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Fercoq</a> (10/2012<span class="style1" style="width:
-                300px;">–</span>7/2014)</li>
-            <li>current position: Assistant Professor, Télécom
-              ParisTech, Paris, France<br>
+            <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier Fercoq</a> (10/2012<span class="style1" style="width:
+                300px;">–</span>7/2014)<br>
+            current position: Assistant Professor, Télécom
+              ParisTech, Paris, France
             </li>
-          </ul>
-          <ul>
+
+            <li><a href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Rachael Tappenden</a> (2/2012<span class="style1" style="width:
+                300px;">–</span>7/2014)<br> current position: Assistant Professor, University of
+              Canterbury, New Zealand
+            </li>
+
             <li><a
-href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Rachael
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Tappenden</a> (2/2012<span class="style1" style="width:
-                300px;">–</span>7/2014)</li>
-            <li>current position: Assistant Professor, University of
-              Canterbury, New Zealand<br>
+href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub Mareček</a> (1/2012<span class="style1" style="width:
+                300px;">–</span>6/2012)<br>
+            current position: Researcher Staff Member, IBM Research,
+              Ireland >
             </li>
+
           </ul>
-          <ul>
-            <li><a
-href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
 
 
+          <h2>PhD Students</h2>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Mareček</a> (1/2012<span class="style1" style="width:
-                300px;">–</span>6/2012)</li>
-            <li>current position: Researcher Staff Member, IBM Research,
-              Ireland <br>
-            </li>
-          </ul>
-          <h2>PhD Students<br>
-          </h2>
           <ul>
             <li><a href="http://filiphanzely.com/">Filip Hanzely</a>
-              (9/2016<span class="style1" style="width: 300px;">–</span>7/2017)</li>
-            <li>current position: PhD student @ KAUST<br>
+              (9/2016<span class="style1" style="width: 300px;">–</span>7/2017)<br>
+            current position: PhD student @ KAUST
             </li>
-          </ul>
-          <ul>
+
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=479">Nicolas
 
@@ -397,434 +216,176 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
                 Loizou</a> (10/2015<span class="style1" style="width:
-                300px;">–</span>6/2019)</li>
-            <li>thesis: Randomized iterative methods for linear systems:
-              momentum, inexactness and gossip<br>
+                300px;">–</span>6/2019)
+            <br>thesis: Randomized iterative methods for linear systems:
+              momentum, inexactness and gossip>
+            <br>
+            next position: postdoc at MILA, Montréal
             </li>
-            <li>next position: postdoc at MILA, Montréal<br>
-            </li>
-          </ul>
-          <ul>
+
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Pavlakou</a> (9/2015<span class="style1" style="width:
-                300px;">–2017</span>)</li>
-            <li>co-supervised with <a
+      Pavlakou</a> (9/2015<span class="style1" style="width:
+                300px;">–2017</span>)<br>
+            co-supervised with <a
                 href="http://homepages.inf.ed.ac.uk/imurray2/">Iain
-                Murray</a></li>
-            <li>current position: Google<br>
+                Murray</a><br>
+            current position: Google
             </li>
-          </ul>
-          <ul>
+
             <li><a href="https://gowerrobert.github.io/">Robert Mansel
                 Gower</a> (3/2015<span class="style1" style="width:
-                300px;">–</span>3/2016)</li>
-            <li>thesis: Sketch and project: randomized iterative methods
-              for solving linear systems and inverting matrices</li>
-            <li>current position: Assistant Professor, Télécom
+                300px;">–</span>3/2016)<br>
+            thesis: Sketch and project: randomized iterative methods
+              for solving linear systems and inverting matrices<br>
+            current position: Assistant Professor, Télécom
               ParisTech, Paris, France </li>
-          </ul>
-          <ul>
+
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 Csiba</a> (9/2014<span class="style1" style="width:
-                300px;">–present</span>)</li>
-            <li>thesis: Data sampling strategies in stochastic
-              algorithms for empirical risk minimization</li>
-            <li>current position: Team Leader for Algorithms,
-              Innovatrics, Bratislava, Slovakia<br>
+                300px;">–present</span>)<br>
+            thesis: Data sampling strategies in stochastic
+              algorithms for empirical risk minimization<br>
+            current position: Team Leader for Algorithms,
+              Innovatrics, Bratislava, Slovakia
             </li>
-          </ul>
-          <ul>
+
             <li><a href="http://jakubkonecny.com/">Jakub Konečný</a>
-              (8/2013<span class="style1" style="width: 300px;"><span
-                  class="style1" style="width: 300px;">–6/2017</span></span>)</li>
-            <li>thesis: Stochastic, distributed and federated
-              optimization for machine learning</li>
-            <li>current position: Research Scientist, Google, Beijing,
-              China<br>
+              (8/2013<span
+                  class="style1" style="width: 300px;">–6/2017</span>)<br>
+            thesis: Stochastic, distributed and federated
+              optimization for machine learning<br>
+            current position: Research Scientist, Google, Beijing,
+              China
             </li>
-          </ul>
-          <ul>
+
             <li><a href="http://www.mtakac.com/CV">Martin Takáč</a>
-              (9/2010<span class="style1" style="width: 300px;">–3/2014</span>)</li>
-            <li>thesis: Randomized coordinate descent methods for big
-              data optimization&nbsp;</li>
-            <li>current position: Assistant Professor, Lehigh
-              University, USA<br>
+              (9/2010<span class="style1" style="width: 300px;">–3/2014</span>)<br>
+            thesis: Randomized coordinate descent methods for big              data optimization<br>
+            current position: Assistant Professor, Lehigh              University, USA
             </li>
+
           </ul>
-          <h2>Visiting PhD Students<br>
-          </h2>
+
+
+
+
+          <h2>Visiting PhD Students</h2>
+
+
           <ul>
             <li><a
-                href="https://scholar.google.com/citations?user=hivmUaoAAAAJ&amp;hl=fr">Luca
-
-
-
-
-
-
-
-
-
-
-
-                Bravi</a> (3/2015<span class="style1" style="width:
-                300px;">–</span>6/2015)</li>
-            <li>visiting PhD student from University of Florence, Italy
-              <br>
+                href="https://scholar.google.com/citations?user=hivmUaoAAAAJ&amp;hl=fr">Luca  Bravi</a> (3/2015<span class="style1" style="width:
+                300px;">–</span>6/2015)<br>
+            visiting PhD student from University of Florence, Italy
             </li>
-          </ul>
-          <ul>
+
             <li><a
-href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Luo</a> (9/2012<span class="style1" style="width:
-                300px;">–</span>2/2013)</li>
-            <li>visiting PhD student from Tsinghua University,
-              China&nbsp;</li>
-            <li>current position: Associate Professor, Xi'an Jiaotong
-              University<br>
+href="https://scholar.google.com/citations?user=C3ujEF0AAAAJ&amp;hl=zh-CN">Minnan                Luo</a> (9/2012<span class="style1" style="width:
+                300px;">–</span>2/2013)<br>
+            visiting PhD student from Tsinghua University,
+              China<br>
+            current position: Associate Professor, Xi'an Jiaotong
+              University
             </li>
+
           </ul>
-          <h2>Master Students<br>
-          </h2>
+
+
+
+
+
+          <h2>Master Students</h2>
+
+
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+                Pavlakou</a> (2015)<br> MSc dissertation</li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Papamakarios</a> (2014) - IRDS project (<a
+Papamakarios</a> (2014) <br> IRDS project (<a
                 href="papers/Papamakarios.pdf">report</a>)</li>
+
+
             <li><a
                 href="https://uk.linkedin.com/in/juraj-labant-21865a9b">Juraj
-
-
-
-
-
-
-
-
-
-
-
-                Labant</a> (2016), Data Scientist at Department of
-              Education, United Kingdom<br>
+                Labant</a> (2016)<br> Data Scientist at Department of
+              Education, United Kingdom
             </li>
+
             <li><a
                 href="https://uk.linkedin.com/in/jakob-kisiala-5807001b">Jakob
-
-
-
-
-
-
-
-
-
-
-
-                Kisiala</a> (2015), <a
-                href="https://arxiv.org/abs/1511.00140">dissertation</a>,
+                Kisiala</a> (2015) <br> <a
+                href="https://arxiv.org/abs/1511.00140">dissertation</a> <br>
               current position: Credit Model Risk Quant at Royal Bank of
               Scotland</li>
-            <li>Arefin Md. Rajib (2015), faculty at Mathematics
+
+            <li>Arefin Md. Rajib (2015) <br> Faculty at Mathematics
               Department, <a href="http://www.du.ac.bd/">University of
                 Dhaka</a>, Bangladesh</li>
-            <li>Yijun Zheng (2015)&nbsp;</li>
-            <li>Li Tao (2015)&nbsp;</li>
-            <li>Tong Ma (2014)&nbsp;</li>
-            <li>Rui Zhong (2014), <a
+
+            <li>Yijun Zheng (2015)</li>
+
+            <li>Li Tao (2015)</li>
+
+            <li>Tong Ma (2014)</li>
+
+            <li>Rui Zhong (2014) <br> <a
                 href="http://www.tencent.com/en-us/index.shtml">Tencent</a>,
-              Beijing <br>
+              Beijing
             </li>
-            <li>Yu Yu (2013)&nbsp;</li>
-            <li>Tingting Tao (2013)&nbsp;</li>
-            <li>Meimei Wang (2013), citigold associate at <a
-                href="http://www.citibank.com.cn/homepage/en/cn_homepage.htm">Citibank
 
+            <li>Yu Yu (2013)</li>
 
+            <li>Tingting Tao (2013)</li>
 
+            <li>Meimei Wang (2013) <br> Citigold Associate at <a
+                href="http://www.citibank.com.cn/homepage/en/cn_homepage.htm">Citibank                China</a></li>
 
+            <li>Meensuk Punlavee (2013)</li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                China</a>&nbsp;</li>
-            <li>Meensuk Punlavee (2013)&nbsp;</li>
-            <li><a href="https://www.linkedin.com/in/abankswatson">Alexander
-
-
-
-
-
-
-
-
-
-
-
-                Banks-Watson</a> (2012), Senior Supply Chain
+            <li><a href="https://www.linkedin.com/in/abankswatson">Alexander                Banks-Watson</a> (2012) <br> Senior Supply Chain
               Optimization Consultant, Opex Analytics<br>
             </li>
+
             <li><a
-                href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Delivorias</a> (2012), quant at <a
+                href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos                Delivorias</a> (2012) <br> Quant at <a
                 href="http://www.swip.com/global/">SWIP</a></li>
+
             <li>Mihyun Jang (2012)</li>
-            <li>Chao Yu (2011), <a href="http://www.rbs.co.uk/">Royal
+
+            <li>Chao Yu (2011) <br> <a href="http://www.rbs.co.uk/">Royal
                 Bank of Scotland</a></li>
-            <li>William Hulme (2011), <a
+
+            <li>William Hulme (2011) <br> <a
                 href="http://www.nhsbt.nhs.uk/">NHS Blood &amp;
-                Transplant</a>, as of '14: <a
+                Transplant</a> <br> as of '14: <a
                 href="http://www.herc.ac.uk/">PhD studies HERC</a></li>
+
             <li><a href="https://uk.linkedin.com/in/jamesboffin">James
-                Boffin</a> (2011), Data Scientist, Aviva<br>
+                Boffin</a> (2011) <br> Data Scientist, Aviva
             </li>
+
             <li><a href="https://uk.linkedin.com/in/marilena-karanika">Marilena
-
-
-
-
-
-
-
-
-
-
-
-                Karanika</a> (2010), Modelling &amp; Analytics Manager
+                Karanika</a> (2010) <br> Modelling &amp; Analytics Manager
               at Royal Bank of Scotland</li>
-            <li>Robie King (2010)&nbsp;</li>
-            <li>Jinwen Lin (2010) <br>
+
+            <li>Robie King (2010)</li>
+
+            <li>Jinwen Lin (2010)
             </li>
+
           </ul>
+
+
+
+
           <h2> Undergraduate Research Interns and Students</h2>
+
+
           <ul>
             <li> Miro Psota (2016-2017, Comenius University)</li>
             <li>Sean Ryan (2015-2016, Edinburgh Mathematics) -
