--- a/i_teaching.html
+++ b/i_teaching.html
@@ -31,61 +31,55 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
-          <h2>KAUST</h2>
-          CS 390T, Special Topics in Federated Learning (<a
-            href="https://piazza.com/kaust.edu.sa">Spring 2020 - Piazza</a>)<br>
-          <br>
-          CS 394D, Contemporary Topics in Machine Learning (Spring 2018,
-          <a
-            href="https://www.piazza.com/kaust.edu.sa/spring2019/cs394d">Spring
-2019
+
+
+<h1>KAUST</h1>
+
+<ul>
+
+  <li> CS 390T, Special Topics in Federated Learning (<a href="https://piazza.com/kaust.edu.sa">Spring 2020 - Piazza</a>)</li>
+
+  <li> CS 394D, Contemporary Topics in Machine Learning (Spring 2018, <a href="https://www.piazza.com/kaust.edu.sa/spring2019/cs394d">Spring 2019 - Piazza</a>)</li>
+
+  <li> CS 390FF, Big Data Optimization (Fall 2017, Fall 2018, <a href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">Fall 2019 - Piazza</a>)</li>
+
+</ul>
 
 
 
 
 
 
+<h1>University of Edinburgh </h1>
+
+<ul style="list-style-type:disc;">
+  <li> <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern Optimization Methods for Big Data Problems</a> (Spring 2016, Spring 2017) </li>
+  <li> Game Theory (Fall 2010, 2011, 2012)<br> </li>
+  <li> Discrete Programming and Game Theory (Fall 2010, 2011, 2012)</li>
+  <li> Optimization Methods in Finance (Spring 2012, 2013, 2014, 2015)</li>
+  <li> Deterministic Optimization Methods in Finance (Spring 2011, 2012, 2013, 2014, 2015) </li>
+</ul>
 
 
 
+<h1>External (Summer / Winter Doctoral Schools) </h1>
 
+<ul>
 
+<li>  A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods (6 hours) <br>
+Event:   <a          href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT 2019 Summer School</a>, Berlin, Germany, August 2019 <br>
 
-            - Piazza</a>)<br>
-          <br>
-          CS 390FF, Big Data Optimization (Fall 2017, Fall 2018, <a
-            href="https://piazza.com/kaust.edu.sa/fall2019/cs390ff/home">Fall
-
-
-            2019 - Piazza</a>)<br>
-          <br>
-          <h2>External (Summer / Winter Doctoral Schools)<br>
-          </h2>
-          <a
-            href="https://iccopt2019.berlin/index.php?page=summerschool">ICCOPT
-
-
-
-
-
-
-
-
-
-
-
-            2019 Summer School</a>, Berlin, Germany, August 2019,<b> <br>
-            "A Guided Walk Through the ZOO of Stochastic Gradient
-            Descent Methods"</b> (6 hours)<b> <br>
-          </b> <a href="talks/ZOO_course_ICCOPT2019.pdf">main slides</a>,
+          <a href="talks/ZOO_course_ICCOPT2019.pdf">main slides</a>,
           extra slides on <a
             href="talks/ZOO_course_ICCOPT2019-SGD-SR.pdf">SGD-SR</a> and
-          <a href="talks/ZOO_course_ICCOPT2019-SEGA.pdf">SEGA</a><br>
-          <br>
-          <a href="http://www.ds3-datascience-polytechnique.fr/">Data
+          <a href="talks/ZOO_course_ICCOPT2019-SEGA.pdf">SEGA</a>
+</li>
+
+<li>
+Randomized Optimization Methods (5 hours) <br>
+          Event: <a href="http://www.ds3-datascience-polytechnique.fr/">Data
             Science Summer School,</a> CMAP, École Polytechnique, Paris,
           France, August 2017 <br>
-          <b>"Randomized Optimization Methods"</b> (5 hours)<br>
           <a href="talks/RandOpt-DS3.pdf">slides</a>, lecture videos: <a
 href="https://comm.medias.polytechnique.fr/videos/richtarik_1_randonopti/">1</a>
           <a
@@ -95,72 +89,37 @@ href="https://comm.medias.polytechnique.fr/videos/richtarik_3_randonopti_08033/"
           <a
 href="https://comm.medias.polytechnique.fr/videos/richtarik_4_randonoptimization/">4</a>
           <a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a><br>
-          <br>
-          <a href="http://sites.uclouvain.be/socn/">Graduate School in
-            Systems, Optimization, Control and Networks (SOCN)</a>,
-          Université catholique de Louvain, Belgium, Fall 2015 <br>
-          <b> "Randomized Algorithms for Big Data Optimization" </b>
-          (21 hours)<br>
-          slides<br>
-          <br>
-          <a href="http://www.irit.fr/cimi-machine-learning/">Machine
-            Learning Thematic Trimester</a>, Toulouse, France, September
-          2015, <b>"Optimization in Machine Learning"</b>, slides<br>
-          <br>
-          <a
-            href="http://lear.inrialpes.fr/people/harchaoui/projects/khronos/">Khronos-Persyval
+href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a>
+</li>
+
+<li>
+Randomized Algorithms for Big Data Optimization (21 hours)<br>
+Event:  <a href="http://sites.uclouvain.be/socn/">Graduate School in          Systems, Optimization, Control and Networks (SOCN)</a>, Université catholique de Louvain, Belgium, Fall 2015
+</li>
+
+<li>Optimization in Machine Learning <br>
+Event: <a href="http://www.irit.fr/cimi-machine-learning/">Machine            Learning Thematic Trimester</a>, Toulouse, France, September          2015
+</li>
+
+
+<li>
+Randomized Coordinate    Descent for Big Data Optimization (6 hours) <br>
+  Event:        <a
+            href="http://lear.inrialpes.fr/people/harchaoui/projects/khronos/">Khronos-Persyval             Days on High-Dimensional Learning and Optimization</a>,
+          Grenoble, France, June 2014
+</li>
 
 
 
-
-
-
-            Days on High-Dimensional Learning and Optimization</a>,
-          Grenoble, France, June 2014, <b>"Randomized Coordinate
-            Descent for Big Data Optimization"</b> (6 hours), slides<br>
-          <br>
-          <h2>Edinburgh </h2>
-          <a href="http://www.drps.ed.ac.uk/15-16/dpt/cxmath11146.htm">Modern
-Optimization
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            Methods for Big Data Problems</a> (Spring 2016, Spring 2017)<br>
-          <br>
-          Game Theory (Fall 2010, 2011, 2012)<br>
-          <br>
-          Discrete Programming and Game Theory (Fall 2010, 2011, 2012)<br>
-          <br>
-          Optimization Methods in Finance (Spring 2012, 2013, 2014,
-          2015)<br>
-          <br>
-          Deterministic Optimization Methods in Finance (Spring 2011,
-          2012, 2013, 2014, 2015) <br>
-        </div>
-        <div style="clear: both;"> </div>
       </div>
-      <div id="footer">
-        <script src="x_footer.js"></script> </div>
+
+      <div style="clear: both;"> </div>
+
+    </div>
+
+      <div id="footer"> <script src="x_footer.js"></script> </div>
+
+
     </div>
   </body>
 </html>
