--- a/i_events.html
+++ b/i_events.html
@@ -344,7 +344,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
 
 
           <li><strong><a
-                href="http://icms.org.uk/workshop.php?id=391#programme">Mathematical Perspectives on Big Data</a>,</strong> Edinburgh, December 10-11,
+                href="http://icms.org.uk/workshop.php?id=391#programme">Mathematical Perspectives on Big Data</a>,</strong> Edinburgh, Scotland, December 10-11,
             2015
 
           <ul>
@@ -356,7 +356,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
 
           <li> <strong> <a
                 href="http://icms.org.uk/workshops/largescaleinverseproblems">Theoretical and Computational Approaches to Large Scale Inverse Problems</a>, </strong> Alan Turing Institute Scoping Workshop, Edinburgh,
-            December 2-4, 2015
+            Scotland, December 2-4, 2015
 
             <ul>
                 <li> Organizer </li>
@@ -368,7 +368,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
 
           <li> <strong> <a
                 href="http://www.icms.org.uk/workshop.php?id=367">Distributed Machine Learning and Optimization</a>, </strong> Alan Turing
-            Institute Scoping Workshop, Edinburgh, November 25-27, 2015
+            Institute Scoping Workshop, Edinburgh, Scotland, November 25-27, 2015
 
             <ul>
                 <li> Organizer </li>
@@ -402,7 +402,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
         </li>
 
 
-          <li><strong><a href="http://www.ismp2015.org/">22nd Int. Symposium on Mathematical Programming (ISMP),</a></strong>      Pittsburgh, July 12-17, 2015
+          <li><strong><a href="http://www.ismp2015.org/">22nd International Symposium on Mathematical Programming (ISMP),</a></strong>      Pittsburgh, July 12-17, 2015
 
           <ul>
             <li> I am putting together two invited sessions. The
@@ -434,7 +434,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
 
 
           <li> <strong> <a
-                href="http://www.maths.ed.ac.uk/hall/EUROPT15/">13th EUROPT Workshop on Advances in Continuous Optimization,</a></strong> Edinburgh, July 8-10, 2015
+                href="http://www.maths.ed.ac.uk/hall/EUROPT15/">13th EUROPT Workshop on Advances in Continuous Optimization,</a></strong> Edinburgh, Scotland, July 8-10, 2015
 
           <ul>
 
@@ -474,7 +474,7 @@ Numerical Linear Algebra and Optimization</b></a>, Birmingham, United Kingdom,  
 </li>
 
 
-          <li> <strong> <a href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data_2015/">Optimization and Big Data 2015,</a></strong> Edinburgh, May 6-8, 2015
+          <li> <strong> <a href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data_2015/">Optimization and Big Data 2015,</a></strong> Edinburgh, Scotland, May 6-8, 2015
 
 
           <ul>
@@ -527,7 +527,7 @@ Schoenlieb    </a> (Cambridge). </li>
 
 
           <li> <strong><a
-                href="http://www.maths.ed.ac.uk/%7Eprichtar/NAIS2014/">Workshop: Numerical Algorithms and Intelligent Software,</a> </strong> Edinburgh, December 5, 2014
+                href="http://www.maths.ed.ac.uk/%7Eprichtar/NAIS2014/">Workshop: Numerical Algorithms and Intelligent Software,</a> </strong> Edinburgh, Scotland, December 5, 2014
 
           <ul>
 
@@ -631,7 +631,7 @@ International   Conference on Continuous Optimization</a></strong>,
 
 
           <li> <strong> <a
-                href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data/">Optimization and Big Data</a></strong>, Edinburgh, May 1-3, 2013
+                href="http://www.maths.ed.ac.uk/%7Eprichtar/Optimization_and_Big_Data/">Optimization and Big Data</a></strong>, Edinburgh, Scotland, May 1-3, 2013
 
           <ul>
             <li> I am the organizer of this workshop. </li>
@@ -678,8 +678,7 @@ href="https://informs.emeetingsonline.com/emeetings/formbuilder/clustersessiondt
 </li>
 
           <li> <strong><a
-href="http://www.ima.org.uk/conferences/conferences_calendar/numerical_linear_algebra_and_optimisation.cfm">3rd
-IMA Conference on Numerical Linear Algebra and Optimisation</a></strong>,
+href="http://www.ima.org.uk/conferences/conferences_calendar/numerical_linear_algebra_and_optimisation.cfm">3rd IMA Conference on Numerical Linear Algebra and Optimisation</a></strong>,
             Birmingham, September 10–12, 2012
 
           <ul>
@@ -689,7 +688,7 @@ IMA Conference on Numerical Linear Algebra and Optimisation</a></strong>,
                 href="minisymposium-Birmingham2012.pdf">programme</a>) </li>
 
             <li> Speakers: Raphael Hauser (Oxford), Guillaume Obozinski
-              (INRIA/ENS), P. R. (Edinburgh), Michel Baes (ETH Zurich),
+              (INRIA/ENS), Peter Richtarik (Edinburgh), Michel Baes (ETH Zurich),
               Martin Takac (Edinburgh), Vinh Xuan Doan (Warwick),
               Rachael Tappenden (Edinburgh), Carola-Bibiane Schoenlieb
               (Cambridge) </li>
@@ -697,7 +696,7 @@ IMA Conference on Numerical Linear Algebra and Optimisation</a></strong>,
 
 </li>
 
-          <li> <strong><a href="http://ismp2012.org/">21st Int. Symposium on Mathematical Programming (ISMP)</a></strong>,
+          <li> <strong><a href="http://ismp2012.org/">21st International Symposium on Mathematical Programming (ISMP)</a></strong>,
             Berlin, Germany, August 19–24, 2012
 
           <ul>
@@ -714,13 +713,12 @@ IMA Conference on Numerical Linear Algebra and Optimisation</a></strong>,
 </li>
 
           <li> <strong><a
-href="http://www.maths.ed.ac.uk/%7Eprichtar/Advances_in_Large_Scale_Optimization/index.html">Advances
-in   Large-Scale Optimization</a></strong>, Edinburgh, May
+href="http://www.maths.ed.ac.uk/%7Eprichtar/Advances_in_Large_Scale_Optimization/index.html">Advances in Large-Scale Optimization</a></strong>, Edinburgh, Scotland, May
             24–25, 2012
 
           <ul>
 
-            <li> I am the organizer of this workshop. </li>
+            <li> I conceived and organized  this workshop. </li>
 
             <li> Speakers: Yurii Nesterov (Louvain; keynote speaker),
               Mark Schmidt (INRIA), Peter Richtarik (Edinburgh),
@@ -733,7 +731,7 @@ in   Large-Scale Optimization</a></strong>, Edinburgh, May
 </li>
 
 <li> <strong><a href="http://www.mathstat.strath.ac.uk/naconf">24th
-Biennial Conference on Numerical Analysis</a></strong>, June
+Biennial Conference on Numerical Analysis</a></strong>, Glasgow, Scotland, June
             28–July 1, 2011
 
           <ul>
